<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ex_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/font_dark_gray"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:text="@string/ex_info"/>
        <TextView
            android:id="@+id/ex_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/font_dark_gray"
            android:textAlignment="center"
            android:layout_below="@+id/ex_content"
            android:text="@string/ex_name"/>
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:stretchColumns="0,1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_btn_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/phone"/>
            <ImageView
                android:id="@+id/img_btn_sms"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/message"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/func_phone"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_sms"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/func_sms"
                android:textSize="18sp"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_btn_internet"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ie"/>
            <ImageView
                android:id="@+id/img_btn_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/music"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_url"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/func_url"
                android:textSize="18sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_music"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/func_music"
                android:textSize="18sp"
                android:textAlignment="center"/>

        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="@color/font_dark_gray"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:text="@string/ex_copyright"/>
    </RelativeLayout>
</LinearLayout>